--- a/TOURIST GUIDE/travelGuide/pom.xml
+++ b/TOURIST GUIDE/travelGuide/pom.xml
@@ -42,7 +42,10 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -63,6 +66,7 @@
 			<version>24.0.1</version>
 			<scope>compile</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
