--- a/TOURIST GUIDE/travelGuide/src/main/resources/application.properties
+++ b/TOURIST GUIDE/travelGuide/src/main/resources/application.properties
@@ -8,10 +8,11 @@ spring.jpa.hibernate.ddl-auto=update
 key=value
 spring.config.name=config
 
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=someone@gmail.com
-spring.mail.password=password
+spring.mail.username=clay.world.max.1011@gmail.com
+spring.mail.password=xgla wnmh fmzy uxiy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
